# spinoza-me

./: .env.example  .gitignore  README.md  ingest_ethics.py  main.py  pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
